Fixup spacing on slider, move admin menu to top.

--- a/themes/unimelb_gshss/css/gshss.css
+++ b/themes/unimelb_gshss/css/gshss.css
@@ -11,3 +11,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+#admin-menu {
+  z-index: 10000;
+}
